# detectiontest

./: .gitignore  CMakeLists.txt
checkpoint/: checkpoint  da.model.index
src/: main.cpp  marker.cpp  marker.h  markerlist.cpp  markerlist.h  neural.cpp  neural.h
